[fix] `--grrr-ui-out` variable fallback value [add] off and margin areas control refinement - left and right [add] `align-content: start` as default value for grrr base

--- a/dev/src/scss/grrr.mixins.scss
+++ b/dev/src/scss/grrr.mixins.scss
@@ -11,6 +11,7 @@
 	grid-auto-rows: auto;
 	grid-auto-flow: row;
 	grid-column: 1 / -1;
+	align-content: start;
 	width: 100%;
 }
 @mixin grrr-vars {
@@ -19,16 +20,21 @@
 	--_grrr-gutter: var(--grrr-gutter, 18px);
 	--_grrr-margin: var(--grrr-margin, 20px);
 	--_grrr-col-width: var(--grrr-col-width, 84px);
+	--_grrr-ui-out: var(--grrr-ui-out, 0px);
 
 	// Calculation Vars
+	--_grrr-margin-left: var(--grrr-margin-left, var(--_grrr-margin));
+	--_grrr-margin-right: var(--grrr-margin-right, var(--_grrr-margin));
 	--_grrr-outside-area: var(--grrr-fluid-off, minmax(0, 1fr));
+	--_grrr-outside-area-left: var(--grrr-fluid-off, var(--grrr-outside-area-left, var(--_grrr-outside-area)));
+	--_grrr-outside-area-right: var(--grrr-fluid-off, var(--grrr-outside-area-right, var(--_grrr-outside-area)));
 	--_grrr-col-target-width: var(--_grrr-col-width);
 	--_grrr-col-default: var(--grrr-fluid-col, minmax(0, var(--_grrr-col-target-width)));
 
 	// Utility Vars
 	--grrr-use-col-responsive-width: calc(
-		(100dvw - var(--grrr-ui-out, 0) - (
-				var(--_grrr-margin) * 2 + var(--_grrr-gutter) *
+		(100dvw - var(--_grrr-ui-out) - (
+				var(--_grrr-margin-left) + var(--_grrr-margin-right) + var(--_grrr-gutter) *
 				(var(--_grrr-cols) - 1)
 		)) / var(--_grrr-cols)
 	);
@@ -45,8 +51,8 @@
 
 	grid-template-columns:
 	// Off Board
-		[full-start margin-start] var(--_grrr-margin)
-		[margin-end off-start] var(--_grrr-outside-area)
+		[full-start margin-start] var(--_grrr-margin-left)
+		[margin-end off-start] var(--_grrr-outside-area-left)
 		// Board Columns
 		[off-end board-start col-start]
 		repeat(
@@ -56,8 +62,8 @@
 		)
 		var(--_grrr-col-default) [col-end board-end off-start]
 		// Off Board
-		var(--_grrr-outside-area) [off-end margin-end]
-		var(--_grrr-margin) [margin-end full-end];
+		var(--_grrr-outside-area-right) [off-end margin-end]
+		var(--_grrr-margin-right) [margin-end full-end];
 }
 
 // grrr--fluid
@@ -74,7 +80,7 @@
 	--_grrr-still-cols: calc(var(--_grrr-still-end) - var(--_grrr-gutter) * var(--_grrr-still-start));
 	--_grrr-still-col-width: calc(
 		(100% - (
-			var(--_grrr-margin) * 2 +
+			var(--_grrr-margin-left) + var(--_grrr-margin-right) +
 			var(--_grrr-gutter) * (var(--_grrr-still-end) - var(--_grrr-still-start))
 		) ) / (var(--_grrr-still-end) - var(--_grrr-still-start) + 1)
 	);
@@ -84,8 +90,8 @@
 
 	grid-template-columns:
 		// Off Board
-		[full-start margin-start] var(--_grrr-margin)
-		[margin-end off-start] var(--_grrr-outside-area)
+		[full-start margin-start] var(--_grrr-margin-left)
+		[margin-end off-start] var(--_grrr-outside-area-left)
 		// Repeat for columns before still-range
 		[off-end board-start col-start]
 		repeat(
@@ -109,16 +115,16 @@
 		)
 		minmax(0, var(--_grrr-col-width)) [col-end board-end off-start]
 		// Off Board
-		var(--_grrr-outside-area) [off-end margin-end]
-		var(--_grrr-margin) [margin-end full-end];
+		var(--_grrr-outside-area-right) [off-end margin-end]
+		var(--_grrr-margin-right) [margin-end full-end];
 }
 
 @mixin grrr--still--from-first {
 	--_grrr-still-start: 1 !important;
 	grid-template-columns:
 		// Off Board
-		[full-start margin-start] var(--_grrr-margin)
-		[margin-end off-start] var(--_grrr-outside-area)
+		[full-start margin-start] var(--_grrr-margin-left)
+		[margin-end off-start] var(--_grrr-outside-area-left)
 		// still columns
 		[off-end board-start col-start]
 		repeat(
@@ -137,16 +143,16 @@
 		)
 		var(--_grrr-col-default) [col-end board-end off-start]
 		// Off Board
-		var(--_grrr-outside-area) [off-end margin-end]
-		var(--_grrr-margin) [margin-end full-end];
+		var(--_grrr-outside-area-right) [off-end margin-start]
+		var(--_grrr-margin-right) [margin-end full-end];
 }
 
 @mixin grrr--still--to-last {
 	--_grrr-still-end: var(--_grrr-cols) !important;
 	grid-template-columns:
 		// Off Board
-		[full-start margin-start] var(--_grrr-margin)
-		[margin-end off-start] var(--_grrr-outside-area)
+		[full-start margin-start] var(--_grrr-margin-left)
+		[margin-end off-start] var(--_grrr-outside-area-left)
 		// Columns before still-range
 		[off-end board-start col-start]
 		repeat(
@@ -162,8 +168,8 @@
 		)
 		var(--_grrr-col-still) [col-end board-end off-start]
 		// Off Board
-		var(--_grrr-outside-area) [off-end margin-end]
-		var(--_grrr-margin) [margin-end full-end];
+		var(--_grrr-outside-area-right) [off-end margin-end]
+		var(--_grrr-margin-right) [margin-end full-end];
 }
 
 // grrr__sub
@@ -199,8 +205,8 @@
 	grid-column: full / col-end var(--_grrr-col-end);
 	grid-template-columns:
 			// Off Board
-		[full-start margin-start] var(--_grrr-margin)
-		[margin-end off-start] var(--_grrr-outside-area)
+		[full-start margin-start] var(--_grrr-margin-left)
+		[margin-end off-start] var(--_grrr-outside-area-left)
 		// Board Columns
 		[off-end board-start col-start]
 		repeat(
@@ -229,8 +235,8 @@
 		)
 		var(--_grrr-col-default) [col-end board-end off-start]
 		// Off Board
-		var(--_grrr-outside-area) [off-end margin-start]
-		var(--_grrr-margin) [margin-end full-end];
+		var(--_grrr-outside-area-right) [off-end margin-start]
+		var(--_grrr-margin-right) [margin-end full-end];
 }
 
 @mixin grrr__sub--off-gutter {
@@ -246,6 +252,7 @@
 	margin-inline: inherit;
 	grid-auto-rows: inherit;
 	grid-auto-flow: inherit;
+	align-content: inherit;
 	width: inherit;
 }
 
@@ -256,6 +263,7 @@
 	margin-inline: unset;
 	grid-auto-rows: unset;
 	grid-auto-flow: unset;
+	align-content: unset;
 	width: unset;
 }
 
